tests/ui/rfcs/rfc-2005-default-binding-mode/const.stderr
error[E0308]: mismatched types
  --> $DIR/const.rs:14:9
   |
LL | const FOO: Foo = Foo{bar: 5};
   | -------------- constant defined here
...
LL |     match &f {
   |           -- this expression has type `&Foo`
LL |         FOO => {},
   |         ^^^
   |         |
   |         expected `&Foo`, found `Foo`
   |         `FOO` is interpreted as a constant, not a new binding
   |         help: introduce a new binding instead: `other_foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
